[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meadbro-api"
version = "0.1.0"
description = "FastAPI backend for mead brewing tracking"
authors = [{name = "Phillip Ramos", email = "deskr4t@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
meadbro-api = "app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
